apps/AxieAnalytics/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: axieanalytics-rabbitmq
  namespace: axieanalytics
spec:
  selector:
    app: axieanalytics-rabbitmq
  ports:
    - port: 5672
      name: amqp
    - port : 15672
      name: management
  type: ClusterIP
